# peakipy

./: .gitignore  BUGFIXES.md  DATA_MANAGEMENT.md  ENHANCED_PLOTTING.md  GUI_ENHANCEMENTS.md  README.md  SHIRLEY_INFO.md  __init__.py  deploy_web_app.sh  peakipy_batch.py  peakipy_gui.py  peakpilot_batch.py  pyproject.toml  requirements.txt  rewrite_commits.sh  setup.py  testdata.txt  testdata_noise.txt  testdata_noise_data.txt  testdata_noise_results.txt  update_github.sh
core/: __init__.py  data_import.py  data_preprocessing.py
core/baseline/: __init__.py  asls.py  linear.py  manual.py  polynomial.py  rolling_ball.py  shirley.py
core/fitting/: __init__.py  fitter.py  initializers.py  model_builder.py  statistics.py
core/profiles/: __init__.py  custom.py  gaussian.py  lorentzian.py  voigt.py
gui_qt/: baseline_panel.py  component_panel.py  control_panel.py  main_window.py  plot_panel.py  results_panel.py  theme.qss
gui_qt/widgets/: component_group.py  parameter_control.py
utils/: __init__.py  logger.py
