[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "peakipy"
version = "0.2.0"
description = "A PySide6-based application for fitting experimental data with multiple theoretical profiles"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "M. Holmboe", email = "michael.holmboe@umu.se"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "lmfit>=1.0",
    "matplotlib>=3.3",
    "pandas>=1.3",
    "PySide6>=6.2",
    "qtawesome>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
peakipy = "peakipy_gui:main"
peakipy-batch = "peakipy_batch:main"

[project.urls]
Homepage = "https://github.com/mholmboe/peakipy"
Repository = "https://github.com/mholmboe/peakipy.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "gui_qt*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
